# fastapi-cloud-microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 190c773f01c4_.py  37fe04c7e59e_latest_14_9_2025.py  46c244c0dff2_.py  4fb135adc521_.py  6b4c44ff240a_.py  7f0ab1659d8f_.py  bb0179569d11_.py  be05f246ceeb_initial_migration.py  d50ffdfcdcab_.py  e47e0c48f614_.py
app/: main.py
app/api/v1/: routes_auth.py  routes_health.py  routes_orders.py  routes_products.py  routes_s3.py  routes_users.py
app/core/: auth.py  config.py  email.py  s3.py  security.py
app/db/: models.py  mongo.py  pg.py
app/repos/: order_repo.py  product_repo.py  user_repo.py
app/schemas/: auth.py  order.py  product.py  s3.py  user.py
postgres-init/: create-multiple-databases.sh
scripts/: run_migrations.sh  seed_db.py
tests/: conftest.py
tests/api/: test_auth_routes.py  test_health_routes.py  test_main.py  test_order_routes.py  test_product_routes.py  test_s3_routes.py  test_user_routes.py
tests/db/: test_mongo.py
tests/repos/: test_order_repo.py  test_product_repo.py  test_user_repo.py
